--- a/introduction_to_the_TSP.ipynb
+++ b/introduction_to_the_TSP.ipynb
@@ -16,10 +16,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "Yx4skoWk2uUz",
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "id": "Yx4skoWk2uUz"
    },
    "source": [
     "# Lab 1 MA course in Artificial Intelligence 2022/2023\n",
@@ -34,9 +31,6 @@
     "outputId": "ea871679-a879-4283-a6a6-1c82dfb12131",
     "colab": {
      "base_uri": "https://localhost:8080/"
-    },
-    "pycharm": {
-     "name": "#%%\n"
     }
    },
    "source": [
@@ -64,10 +58,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "4aGR4Nus83wa",
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "id": "4aGR4Nus83wa"
    },
    "source": [
     "## Travelling Salesman Problem\n",
@@ -127,9 +118,6 @@
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 673
-    },
-    "pycharm": {
-     "name": "#%%\n"
     }
    },
    "source": [
@@ -185,9 +173,6 @@
     "outputId": "5cf92e29-1ee4-4fef-f097-d2b06b59dbcd",
     "colab": {
      "base_uri": "https://localhost:8080/"
-    },
-    "pycharm": {
-     "name": "#%%\n"
     }
    },
    "source": [
@@ -212,9 +197,6 @@
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 673
-    },
-    "pycharm": {
-     "name": "#%%\n"
     }
    },
    "source": [
@@ -267,9 +249,6 @@
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 1000
-    },
-    "pycharm": {
-     "name": "#%%\n"
     }
    },
    "source": [
@@ -314,10 +293,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "_8aqPWNlfqiY",
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "id": "_8aqPWNlfqiY"
    },
    "source": [
     "### How to create solutions for the TSP\n",
@@ -416,10 +392,7 @@
   {
    "cell_type": "code",
    "metadata": {
-    "id": "Cp9esJRv41Yy",
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "id": "Cp9esJRv41Yy"
    },
    "source": [
     "# example of a constructive heuristic\n",
@@ -449,9 +422,6 @@
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 317
-    },
-    "pycharm": {
-     "name": "#%%\n"
     }
    },
    "source": [
@@ -505,10 +475,7 @@
   {
    "cell_type": "code",
    "metadata": {
-    "id": "RUv73Gl45CAj",
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "id": "RUv73Gl45CAj"
    },
    "source": [
     "def nn(dist_matrix, starting_node=0):\n",
@@ -535,9 +502,6 @@
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 317
-    },
-    "pycharm": {
-     "name": "#%%\n"
     }
    },
    "source": [
@@ -577,10 +541,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "e9NJJzqfkrJQ",
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "id": "e9NJJzqfkrJQ"
    },
    "source": [
     "### How to test different combinations of heuristics\n",
@@ -591,10 +552,7 @@
   {
    "cell_type": "code",
    "metadata": {
-    "id": "TLvB5yVY3GF_",
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "id": "TLvB5yVY3GF_"
    },
    "source": [
     "import pandas as pd\n",
@@ -648,9 +606,6 @@
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 457
-    },
-    "pycharm": {
-     "name": "#%%\n"
     }
    },
    "source": [
@@ -677,9 +632,6 @@
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 499
-    },
-    "pycharm": {
-     "name": "#%%\n"
     }
    },
    "source": [
@@ -718,10 +670,7 @@
     "instance.plot_optimal_solution()"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   }
  ]
