--- a/ILS_for_the_TSP.ipynb
+++ b/ILS_for_the_TSP.ipynb
@@ -18,7 +18,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Homework 1 MA course in Artificial Intelligence 2022/2023\n",
+    "# Homework 1 (Tutorial 2)\n",
+    "## MA course in Artificial Intelligence 2022/2023\n",
     "\n"
    ],
    "metadata": {
@@ -329,30 +330,6 @@
     "      # implement acceptance criterion\n",
     "      \n",
     "      yield best_sol, best_cost, ls_calls, False"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "could not broadcast input array from shape (11,) into shape (20,)",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mValueError\u001B[0m                                Traceback (most recent call last)",
-      "Input \u001B[0;32mIn [7]\u001B[0m, in \u001B[0;36m<cell line: 1>\u001B[0;34m()\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[43mgenerate_cl\u001B[49m\u001B[43m(\u001B[49m\u001B[43mmatrix\u001B[49m\u001B[43m)\u001B[49m\u001B[38;5;241m.\u001B[39mshape\n",
-      "Input \u001B[0;32mIn [6]\u001B[0m, in \u001B[0;36mgenerate_cl\u001B[0;34m(dist_matrix)\u001B[0m\n\u001B[1;32m     19\u001B[0m cl \u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39mzeros((n, \u001B[38;5;241m20\u001B[39m))\n\u001B[1;32m     20\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(n):\n\u001B[0;32m---> 21\u001B[0m   cl[i] \u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39margsort(dist_matrix[i, :])[\u001B[38;5;241m1\u001B[39m: \u001B[38;5;241m21\u001B[39m]\n\u001B[1;32m     22\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m cl\n",
-      "\u001B[0;31mValueError\u001B[0m: could not broadcast input array from shape (11,) into shape (20,)"
-     ]
-    }
-   ],
-   "source": [
-    "generate_cl(matrix).shape"
    ],
    "metadata": {
     "collapsed": false
