--- a/introduction_to_the_KP.ipynb
+++ b/introduction_to_the_KP.ipynb
@@ -18,8 +18,8 @@
     "id": "Yx4skoWk2uUz"
    },
    "source": [
-    "# Lab 2 MA course in Artificial Intelligence 2022/2023\n",
-    "\n"
+    "# Tutorial 3\n",
+    "## MA course in Artificial Intelligence 2022/2023"
    ]
   },
   {
