--- a/introduction_to_the_TSP.ipynb
+++ b/introduction_to_the_TSP.ipynb
@@ -19,9 +19,10 @@
     "id": "Yx4skoWk2uUz"
    },
    "source": [
-    "# Lab 1 MA course in Artificial Intelligence 2022/2023\n",
+    "# Tutorial 1\n",
+    "## MA course in Artificial Intelligence 2022/2023\n",
     "\n",
-    "Firts, let's download the repo with useful code and data from Github"
+    "Firts, let's download the repo with useful code and data from GitHub"
    ]
   },
   {
