--- a/Solution-ILS_for_the_TSP.ipynb
+++ b/Solution-ILS_for_the_TSP.ipynb
@@ -69,7 +69,7 @@
     "from solvers.constructive_algorithms import compute_length\n",
     "from solvers.local_search import TwoOpt\n",
     "\n",
-    "# If you are not running from your local, add the prefix AI2021MA (comment the previous 3 lines and use instead the following 3 lines)\n",
+    "# If you are not running from your local, add the prefix AI2021MA (comment the previous lines and use instead the following lines)\n",
     "# from AI2022MA.IO_manager.io_tsp import TSP_Instance_Creator\n",
     "# from AI2022MA.solvers.local_search import TwoOpt\n",
     "# from AI2022MA.solvers.TSP_solver import Solver_TSP\n",
