Finalised solution homework 1

--- a/Solution-ILS_for_the_TSP.ipynb
+++ b/Solution-ILS_for_the_TSP.ipynb
@@ -285,20 +285,20 @@
    "cell_type": "markdown",
    "source": [
     "Given ABCD = [  0  1  2  3  4  5  6  7  8  9 10 11]\n",
-    "and   ADCB = [ 11  0  1  2 10  5  6  7  8  9  3  4]\n",
+    "and   ADCB = [ 10 11  8  9  6  7  0  1  2  3  4  5]\n",
     "\n",
     "Which are the vertices in the segments A, B, C and D here?\n",
     "Which are the vertices a, b, c and d?\n",
     "\n",
-    "A is from 11 to 2\n",
-    "B is from 3 to 4\n",
-    "C is 5 to 9\n",
-    "D is 10\n",
+    "A is from 10 to 11\n",
+    "B is from 0 to 5\n",
+    "C is from 6 to 7\n",
+    "D is from 8 to 9\n",
     "\n",
-    "a is 3\n",
-    "b is 5\n",
-    "c is 10\n",
-    "d is 11"
+    "a is 0\n",
+    "b is 6\n",
+    "c is 8\n",
+    "d is 10"
    ],
    "metadata": {
     "collapsed": false
@@ -754,15 +754,6 @@
   {
    "cell_type": "markdown",
    "source": [
-    "The best result is found when initialized with random, and improved using **ILS-LSMC** as an acceptance criterion with respect to the *tour length* (Best: 15836; Avg: 15843; Std: 10.79), the *gap* (Best: 0.35; Avg: 0.40; Std: 0.07), while for *number of calls* the best result is with **ILS-RW** (Best: 703; Avg: 708.33; Std: 5.03)."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
     "#### Problem: pr439.tsp"
    ],
    "metadata": {
@@ -857,15 +848,6 @@
   {
    "cell_type": "markdown",
    "source": [
-    "The best result is found when initialized with random, and improved using **ILS-Better** as an acceptance criterion with respect to the *tour length* (Best: 110363; Avg: 110672.33; Std: 320.53), the *gap* (Best: 2.93; Avg: 3.22; Std: 0.30), while for *number of calls* the best result is with **ILS-LSMC** (Best: 122; Avg: 125.67; Std: 3.21)."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
     "#### Problem: u1060.tsp"
    ],
    "metadata": {
@@ -952,17 +934,6 @@
    ],
    "source": [
     "df3.groupby(['method'])['calls local search'].agg(['min', 'mean', 'std'])"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "The best result is found when initialized with random, and improved using **ILS-Better** as an acceptance criterion with respect to the *tour length* (Best: 241031; Avg: 244897.33) but standard deviation is very high (Std: 4014.95). If a lower std is preferred, then it is better to use **ILS-RW** for the tour length, with similar min and avg values and lower std.\n",
-    "Concerning the *gap*, **ILS-Better** has good values for min and avg, but bad for std (Best: 7.56; Avg: 9.28; Std: 1.79), so **ILS-RW** if preferable (Best: 9.78; Avg: 9.44; Std: 0.65).\n",
-    "Finally, for the *number of calls*, **ILS-LSMC** and **ILS-Better** have exactly same values, **ILS-RW** has 2 calls less but a higher std."
    ],
    "metadata": {
     "collapsed": false
