--- a/introduction_to_the_TSP.ipynb
+++ b/introduction_to_the_TSP.ipynb
@@ -62,7 +62,7 @@
     "\n",
     "* generartes a \"'random'\" TSP instance, by taking as input the random seed and the dimension (or number) of points.\n",
     "\n",
-    "* uploads a \"'standard'\" TSP instance from the files available in \"./AI2020/problems/TSP/\".\n",
+    "* uploads a \"'standard'\" TSP instance from the files available in \"./AI_USI_MA/problems/TSP/\".\n",
     "\n",
     "\n",
     "&nbsp;\n",
