--- a/introduction_to_the_TSP.ipynb
+++ b/introduction_to_the_TSP.ipynb
@@ -449,9 +449,9 @@
     "from time import time as t\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from solvers.TSP_solver import Solver_TSP\n",
+    "# from solvers.TSP_solver import Solver_TSP\n",
     "# if you are running not from your local add the prefix AI_USI_MA (comment the previous line and uncomment the following line)\n",
-    "# from AI_USI_MA.solvers.TSP_solver import Solver_TSP\n",
+    "from AI_USI_MA.solvers.TSP_solver import Solver_TSP\n",
     "\n",
     "ic = TSP_Instance_Creator(\"standard\", 'd198.tsp')\n",
     "\n",
