--- a/GAforFO.ipynb
+++ b/GAforFO.ipynb
@@ -357,7 +357,48 @@
         "id": "nRYCTTtaXt87"
       },
       "source": [
-        "### Gray encode and decode functions"
+        "---\n",
+        "> # Gray Code (Gray Encoding)\n",
+        ">\n",
+        "> Gray code is a binary numeral system where two successive numbers differ in only one bit. This makes it particularly useful in scenarios where it's beneficial to avoid sudden changes in multiple bits, such as analog-to-digital converters.\n",
+        ">\n",
+        "> ## Properties of Gray Code:\n",
+        ">\n",
+        "> 1. **Uniqueness:** Every binary number has a unique Gray code equivalent.\n",
+        "> 2. **Single-bit change:** Only one bit changes at a time when moving from one value to the next.\n",
+        ">\n",
+        "> ## How to Convert Binary to Gray Code:\n",
+        ">\n",
+        "> To convert a binary number to Gray code:\n",
+        ">\n",
+        "> 1. The MSB (most significant bit) of the Gray code is the same as the original number.\n",
+        "> 2. The subsequent bits of the Gray code can be obtained by XOR-ing the current bit with the next significant bit.\n",
+        ">\n",
+        "> For example, to convert the binary number `1101` to Gray code:\n",
+        ">\n",
+        "> 1. The MSB is `1`.\n",
+        "> 2. XOR the first and second bits: `1 ⊕ 1 = 0`.\n",
+        "> 3. XOR the second and third bits: `1 ⊕ 0 = 1`.\n",
+        "> 4. XOR the third and fourth bits: `0 ⊕ 1 = 1`.\n",
+        ">\n",
+        "> Thus, the Gray code representation is `1011`.\n",
+        ">\n",
+        "> ## How to Convert Gray Code back to Binary:\n",
+        ">\n",
+        "> 1. The MSB of the binary code is the same as the Gray code.\n",
+        "> 2. To get the subsequent binary bits, XOR the current Gray code bit with the previous binary bit.\n",
+        ">\n",
+        "> For example, to convert the Gray code `1011` back to binary:\n",
+        ">\n",
+        "> 1. The MSB is `1`.\n",
+        "> 2. XOR the MSB with the next Gray code bit: `1 ⊕ 0 = 1`.\n",
+        "> 3. XOR the previous result with the next Gray code bit: `1 ⊕ 1 = 0`.\n",
+        "> 4. XOR the previous result with the next Gray code bit: `0 ⊕ 1 = 1`.\n",
+        ">\n",
+        "> Thus, the binary representation is `1101`.\n",
+        "\n",
+        "---\n",
+        "\n"
       ]
     },
     {
