--- a/ACS_for_the_TSP.ipynb
+++ b/ACS_for_the_TSP.ipynb
@@ -14,9 +14,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Homework 3 (Tutorial 7)\n",
+        "# Third Assignment\n",
         "\n",
-        "##MA course in Artificial Intelligence 2022/2023\n",
+        "##MSc course in Artificial Intelligence\n",
         "\n",
         "insert your \"Name Surname\""
       ],
